# updog

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml  requirements.txt  updog_cli.py
assets/: index.html
updog/: __init__.py  plugin_base.py  updog.py
updog/plugins/: Connections.py  DNS.py  HTTP.py  Layer3Protocols.py  Protocols.py  Summary.py  Traffic.py  __init__.py
