[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.ruff]
exclude = [
  # Defaults
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  # Custom
  "src/tests"
]
ignore = ["ANN101", "D203", "D212", "DTZ006", "EXE002", "G004", "PGH003", "PTH118", "PTH119", "PTH120", "PTH123", "TCH002", "TCH003", "T201"]
line-length = 88
select = ["ALL"]
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10
